# travel-planner-backend

./: .gitignore  README.md  langgraph.json  pyproject.toml
app/: dependencies.py  main.py  schemas.py
app/api/: v1.py
app/api/endpoints/: __init__.py  chat.py  plan.py
app/core/: llm.py  log.py
app/services/: agent.py  chat_service.py
app/services/agents/: agent.py  langchain_stream.py  stream.py
app/services/agents/adk/: adk_agent.py  adk_stream.py
app/services/agents/agno/: __init__.py  agent.py  agno_stream.py  router.py  steps.py  workflow.py
app/services/agents/agno/agents/: __init__.py  extraction.py  follow_up.py
app/services/agents/agno/utils/: agno_stream.py  instructions.py  schemas.py  tools.py
app/services/agents/agno/workflows/: __init__.py  agent.py  travel_planner.py
app/services/agents/langchain/: agent.py  langchain_stream.py
app/services/agents/langchain/utils/: langgraph_stream.py  nodes.py  prompt.py  schemas.py  state.py  tools.py
app/services/agents/utils/: nodes.py  schema.py
contract/: schema.md
doc/: taiwan_travel_copilot_plan.md
