[project]
name = "travel-planner-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.1",
    "google-adk>=1.27.2",
    "httpx>=0.28.1",
    "logging>=0.4.9.6",
    "sqlmodel>=0.0.37",
]
